--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,17 +4,38 @@
     box-sizing: border-box;
 }
 
+:root {
+    --cor-bg: #B9B4C7;
+    --cor-ft: #FAF0E6;
+    --cor-pri: #352F44;
+    --cor-sec: #5C5470;
+}
+
+body {
+    background-color: var(--cor-bg);
+    color:  var(--cor-ft);
+}
+
 .cabecalho {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
     position: relative;
+    background-color: var(--cor-sec);
 }
 
 .cabecalho .icones {
     position: absolute;
     right: 30px;
+}
+
+.titulo {
+    text-align: center;
+}
+
+.titulo h1 {
+    font-size: 48px;
 }
 
 .container {
@@ -25,15 +46,35 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 30px;
+    padding: 30px 0;
     width: 80%;
     margin: 0 auto;
 }
 
 .container-lista {
+    background-color: var(--cor-pri);
     text-align: center;
-    margin: 0 auto;
+    margin: 16px auto;
     width: 80%;
+    border-radius: 12px;
+    padding: 12px 0;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.container-lista .lista {
+    align-self: center;
+}
+
+.container-lista h3 {
+    font-size: 36px;
+    margin-bottom: 24px;
+    text-decoration: underline;
+}
+
+ul {
+    padding: 0;
 }
 
 .lista {
@@ -41,6 +82,7 @@
     flex-wrap: wrap;
     gap: 30px;
     justify-content: center;
+    margin: 0 auto;
 }
 
 .lista li {
@@ -49,4 +91,13 @@
 
 .lista li .card-body {
     height: auto;
+}
+
+.card-body {
+    background-color: var(--cor-ft);
+}
+
+.btn {
+    background-color: var(--cor-pri);
+    border: none;
 }
